--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
 </head>
 <body>
+
+<header>
+  <img src="img/logo-sem-fundo.png.png" alt="Logo DJ DIIH" class="logo">
+</header>
+  
   <header>
-    <h1>DJ DIIH</h1>
     <p>Conectando vibes com som de qualidade</p>
     <a class="spotify-button" href="https://open.spotify.com/user/31b6fq4skz6xppbhpc5twnvjrloq?si=UcIxMh9eSa2SLzaJzKqvXg" target="_blank">
       🔊 Ouça no Spotify
